# RazerInterface

./: CMakeLists.txt  README.md  build.sh  razer.pc.in
example/: setkeys.c
src/: dbus_handler.c  devicelighting.c  devicemanager.c  keyboard.c  mouse.c
src/include/: dbus_handler.h  devicelighting.h  devicemanager.h  devicematrix.h  keyboard.h  mouse.h
